--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Book Collection</title>
+    <title>Awesome Books</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Book Collection</h1>
+    <h1>Awesome Books</h1>
 
     <form id="bookForm">
-      <label for="title">Title:</label>
-      <input type="text" id="title" required />
-      <br /><br />
-      <label for="author">Author:</label>
-      <input type="text" id="author" required /><br /><br />
+      <input type="text" id="title" required placeholder="Title" /> <br />
+      <br />
+      <input
+        type="text"
+        id="author"
+        required
+        placeholder="Author"
+      /><br /><br />
       <button type="submit">Add</button>
     </form>
 
