--- a/index.html
+++ b/index.html
@@ -5,36 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome Books</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Caveat:wght@400;500;600;700&family=Comfortaa:wght@300;400;500;600;700&family=Lato:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header class="header">
+    <nav class="nav">
+      <h4 class="name">Awesome Books</h4>
+      <ul class="link-list">
+        <li><a href="#" class="list link">List</a></li>
+        <li><a href="#" class="add-new link">Add New</a></li>
+        <li><a href="#" class="contact link">Contact</a></li>
+      </ul>
+      <img src="./img/hamburger.png" alt="ham" class="ham" />
+    </nav>
+  </header>
+
   <body>
-    <h1>Awesome Books</h1>
+    <section class="date-box"></section>
 
-    <form id="bookForm">
-      <input type="text" id="title" required placeholder="Title" /> <br />
-      <br />
-      <input
-        type="text"
-        id="author"
-        required
-        placeholder="Author"
-      /><br /><br />
-      <button type="submit">Add</button>
-    </form>
-
-    <h2>Books:</h2>
-    <center>
+    <div class="all-books">
+      <h1>All awesome books</h1>
       <table id="bookTable">
         <thead>
-          <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th></th>
-          </tr>
+          <tr></tr>
         </thead>
         <tbody id="bookList"></tbody>
       </table>
-    </center>
+    </div>
+
+    <div class="add-book-box hidden">
+      <h1>Add new a book</h1>
+      <form id="bookForm" class="book-form">
+        <input
+          type="text"
+          id="title"
+          required
+          placeholder="Title"
+          class="input"
+        />
+        <input
+          type="text"
+          id="author"
+          required
+          placeholder="Author"
+          class="input"
+        />
+        <button type="submit" class="button add">Add</button>
+      </form>
+    </div>
+    <div class="contact-me-box hidden">
+      <h1>Contact information</h1>
+      <div class="note">
+        <p class="p-note">
+          Do you have any question or you just want to say "Hello"? <br />
+          You can reach out to us:
+        </p>
+      </div>
+      <ul class="reach-link">
+        <li>Our email: lorem@gmail.com</li>
+        <li>Our phone number: +2348045123698</li>
+        <li>Our address: Street name 22, 34895, Usuma City, Wakanda.</li>
+      </ul>
+    </div>
+    <footer class="footer">
+      <p class="footer-note">&copy;Copyright Zerihun-2023</p>
+    </footer>
   </body>
-  <script src="index.js"></script>
+  <script src="scripts.js"></script>
 </html>
